--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,14 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+      nav ul li.active a {
+    font-weight: bold;
+    color: #ff6600; /* Highlight color */
+    text-decoration: underline;
+}
+
+    </style>
 
 {% seo %}
 
