--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,14 +10,8 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
-    <style type="text/css">
-      nav ul li.active a {
-    font-weight: bold;
-    color: #ff6600; /* Highlight color */
-    text-decoration: underline;
-}
+    <link rel="stylesheet" href="{{ "/assets/css/custom.css" | relative_url }}">
 
-    </style>
 
 {% seo %}
 
